--- a/shirt.html
+++ b/shirt.html
@@ -51,11 +51,11 @@
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="#about" class="get-started-btn scrollto" style="font-size: 1em;">
+      <a href="#shopcart" class="get-started-btn scrollto" style="font-size: 1em;">
         <i class="icofont-shopping-cart" style="font-size: 1.2em;"></i>
         <span>Aantal: (1) |  €  14.96 </span>
       </a>
-
+      <div id="mobile-button"></div>
     </div>
   </header><!-- End Header -->
 
