--- a/waiting.html
+++ b/waiting.html
@@ -1,90 +1,107 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <base target="_top">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <style type="text/css">
-      .progress{
-        height: 25px;
-        background: #262626;
-        padding: 5px;
-        overflow: visible;
-        border-radius: 20px;
-        border-top: 1px solid #000;
-        border-bottom: 1px solid #7992a8;
-        margin-top: 50px;
-      }
-      .progress .progress-bar{
-        border-radius: 20px;
-        position: relative;
-        animation: animate-positive 2s;
-      }
-      .progress .progress-value{
-        display: block;
-        padding: 3px 7px;
-        font-size: 13px;
-        color: #fff;
-        border-radius: 4px;
-        background: #191919;
-        border: 1px solid #000;
-        position: absolute;
-        top: -40px;
-        right: -10px;
-        width: 55px;
-        text-align: right;
-      }
-      .progress .progress-value:after{
-        content: "";
-        border-top: 10px solid #191919;
-        border-left: 10px solid transparent;
-        border-right: 10px solid transparent;
-        position: absolute;
-        bottom: -6px;
-        left: 26%;
-      }
-      .progress-bar.active{
-        animation: reverse progress-bar-stripes 0.40s linear infinite, animate-positive 2s;
-      }
-      @-webkit-keyframes animate-positive{
-        0% { width: 0; }
-      }
-      @keyframes animate-positive{
-        0% { width: 0; }
-      }
+        .progress {
+            height: 25px;
+            background: #262626;
+            padding: 5px;
+            overflow: visible;
+            border-radius: 20px;
+            border-top: 1px solid #000;
+            border-bottom: 1px solid #7992a8;
+            margin-top: 50px;
+        }
+
+        .progress .progress-bar {
+            border-radius: 20px;
+            position: relative;
+            animation: animate-positive 2s;
+        }
+
+        .progress .progress-value {
+            display: block;
+            padding: 3px 7px;
+            font-size: 13px;
+            color: #fff;
+            border-radius: 4px;
+            background: #191919;
+            border: 1px solid #000;
+            position: absolute;
+            top: -40px;
+            right: -10px;
+            width: 55px;
+            text-align: right;
+        }
+
+        .progress .progress-value:after {
+            content: "";
+            border-top: 10px solid #191919;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            position: absolute;
+            bottom: -6px;
+            left: 26%;
+        }
+
+        .progress-bar.active {
+            animation: reverse progress-bar-stripes 0.40s linear infinite, animate-positive 2s;
+        }
+
+        @-webkit-keyframes animate-positive {
+            0% {
+                width: 0;
+            }
+        }
+
+        @keyframes animate-positive {
+            0% {
+                width: 0;
+            }
+        }
     </style>
-  </head>
-  <body onload="start()">
-    <div class="progress">
-      <div id="bar" class="progress-bar progress-bar-success progress-bar-striped active" style="width: 0%;">
+</head>
+<body onload="start()">
+<div class="progress">
+    <div id="bar" class="progress-bar progress-bar-success progress-bar-striped active" style="width: 0%;">
         <div id="percentage" class="progress-value">0%</div>
-      </div>
     </div>
-  </body>
-  <script>
+</div>
+</body>
+<script>
     var timer;
     var frequency = 500;
-    var step = frequency/(<?  >*1000) * 100;
+    var step = frequency / ( < ?
+    >*
+    1000
+    ) *
+    100;
     var count = 0;
     var barEle = document.getElementById("bar");
     var percentageEle = document.getElementById("percentage");
 
     function start() {
-        timer = window.setInterval(UpdateProgress,frequency);  
+        timer = window.setInterval(UpdateProgress, frequency);
     }
+
     function UpdateProgress() {
-        if(count*step <100){
-            var percentage = (count*step).toFixed(1) +'%';
-            barEle.style.width =  percentage;
+        if (count * step < 100) {
+            var percentage = (count * step).toFixed(1) + '%';
+            barEle.style.width = percentage;
             percentageEle.innerHTML = percentage;
-            count +=1;
-        }else{
+            count += 1;
+        } else {
             stop();
         }
     }
-    function stop(){
+
+    function stop() {
         window.clearInterval(timer);
     }
-  </script>
+</script>
 </html>
 
 
